--- a/src/assignment_1/sample.fxml
+++ b/src/assignment_1/sample.fxml
@@ -1,11 +1,72 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.GridPane?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
-
-<HBox alignment="center" xmlns="http://javafx.com/javafx/8.0.221" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment_1.Controller">
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.CheckBox?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
+<?import com.jfoenix.controls.JFXRadioButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXTextArea?>
+<?import com.jfoenix.controls.JFXListView?>
+<?import com.jfoenix.controls.JFXSnackbar?>
+<HBox fx:controller="assignment_1.Controller"
+      xmlns:fx="http://javafx.com/fxml" fx:id="root">
     <children>
-        <ListView id="listView" fx:id="listView" />
-        <ListView id="employeeListView" fx:id="employeeListView" />
+        <!--<ListView fx:id="listView"/>-->
+        <ListView fx:id="employeeListView"/>
+        <VBox spacing="10">
+            <HBox>
+                <Label text="Name: " prefWidth="50"/>
+                <TextField />
+            </HBox>
+            <HBox>
+                <Label text="Active: " prefWidth="50"/>
+                <CheckBox />
+            </HBox>
+            <HBox spacing="10">
+                <Button text="simple button" prefWidth="150" fx:id="button"/>
+                <CheckBox text="simple checkbox" prefWidth="150"/>
+                <RadioButton text="simple radiobutton" prefWidth="150"/>
+                <ComboBox prefWidth="150">
+                    <items>
+                        <FXCollections fx:factory="observableArrayList">
+                            <String fx:value="Apple" />
+                            <String fx:value="Orange" />
+                            <String fx:value="Banana" />
+                        </FXCollections>
+                    </items>
+                </ComboBox>
+            </HBox>
+            <HBox spacing="10">
+                <JFXButton text="FANCY BUTTON" prefWidth="150"/>
+                <JFXCheckBox text="FANCY CHECKBOX" prefWidth="150"/>
+                <JFXRadioButton text="FANCY RADIOBUTTON" prefWidth="150"/>
+                <JFXComboBox prefWidth="150">
+                    <items>
+                        <FXCollections fx:factory="observableArrayList">
+                            <String fx:value="Apple" />
+                            <String fx:value="Orange" />
+                            <String fx:value="Banana" />
+                        </FXCollections>
+                    </items>
+                </JFXComboBox>
+
+            </HBox>
+        </VBox>
+        <JFXListView fx:id="fancyEmployeeListView" />
     </children>
 </HBox>
+
+
