moved some things around and renamed stuff

--- a/Assignment 1/employee_control/mainview.fxml
+++ b/Assignment 1/employee_control/mainview.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox fx:id="root" xmlns="http://javafx.com/javafx/8.0.221" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment_1.Controller">
+<HBox fx:id="root" xmlns="http://javafx.com/javafx/8.0.221" xmlns:fx="http://javafx.com/fxml/1" fx:controller="employee_control.Controller">
     <children>
       <VBox prefHeight="350.0" prefWidth="250.0">
          <children>
