--- a/Assignment 1/employee_control/form_adduser.fxml
+++ b/Assignment 1/employee_control/form_adduser.fxml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.collections.FXCollections?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -15,20 +13,6 @@
         <VBox prefHeight="200.0" prefWidth="300.0">
             <children>
                 <HBox layoutX="10.0" layoutY="138.0" prefHeight="32.0" prefWidth="300.0" />
-                <HBox prefHeight="32.0" prefWidth="300.0">
-                    <children>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                            <children>
-                                <Label alignment="CENTER_RIGHT" prefHeight="30.0" prefWidth="100.0" text="Name: " />
-                            </children>
-                        </VBox>
-                        <VBox fillWidth="false" prefHeight="30.0" prefWidth="200.0">
-                            <children>
-                                <TextField fx:id="field_adduser_name" prefHeight="30.0" prefWidth="195.0" />
-                            </children>
-                        </VBox>
-                    </children>
-                </HBox>
                 <HBox layoutX="10.0" layoutY="10.0" prefHeight="32.0" prefWidth="300.0">
                     <children>
                         <VBox prefHeight="200.0" prefWidth="100.0">
@@ -38,7 +22,21 @@
                         </VBox>
                         <VBox fillWidth="false" prefHeight="28.0" prefWidth="200.0">
                             <children>
-                                <TextField fx:id="field_adduser_id" prefHeight="30.0" prefWidth="195.0" text="AutoGenerate" />
+                        <JFXTextField fx:id="field_adduser_id" editable="false" prefWidth="200.0" />
+                            </children>
+                        </VBox>
+                    </children>
+                </HBox>
+                <HBox prefHeight="32.0" prefWidth="300.0">
+                    <children>
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                            <children>
+                                <Label alignment="CENTER_RIGHT" prefHeight="30.0" prefWidth="100.0" text="Name: " />
+                            </children>
+                        </VBox>
+                        <VBox fillWidth="false" prefHeight="30.0" prefWidth="200.0">
+                            <children>
+                        <JFXTextField fx:id="field_adduser_name" prefWidth="200.0" />
                             </children>
                         </VBox>
                     </children>
@@ -52,14 +50,7 @@
                         </VBox>
                         <VBox fillWidth="false" prefHeight="29.0" prefWidth="202.0">
                             <children>
-                                <ComboBox fx:id="field_adduser_type" prefHeight="30.0" prefWidth="195.0" visibleRowCount="2">
-                                    <items>
-                                        <FXCollections fx:factory="observableArrayList">
-                                            <String fx:value="Staff" />
-                                            <String fx:value="Faculty" />
-                                        </FXCollections>
-                                    </items>
-                                </ComboBox>
+                        <JFXComboBox fx:id="field_adduser_type" prefWidth="200.0" />
                             </children>
                         </VBox>
                     </children>
@@ -68,28 +59,42 @@
                     <children>
                         <VBox prefHeight="29.0" prefWidth="100.0">
                             <children>
-                                <Label alignment="CENTER_RIGHT" prefHeight="30.0" prefWidth="100.0" text="Weight: " />
+                                <Label alignment="CENTER_RIGHT" prefHeight="30.0" prefWidth="100.0" text="Department: " />
                             </children>
                         </VBox>
                         <VBox fillWidth="false">
                             <children>
-                                <TextField fx:id="field_adduser_weight" prefHeight="30.0" prefWidth="195.0" text="Department / Access Level" />
+                        <JFXComboBox fx:id="field_adduser_department" prefWidth="200.0" />
                             </children>
                         </VBox>
                     </children>
                 </HBox>
-                <HBox layoutX="10.0" layoutY="106.0" prefHeight="32.0" prefWidth="300.0" />
+            <HBox prefHeight="32.0" prefWidth="300.0">
+               <children>
+                  <VBox prefHeight="29.0" prefWidth="100.0">
+                     <children>
+                        <Label alignment="CENTER_RIGHT" prefHeight="30.0" prefWidth="100.0" text="Access Level: " />
+                     </children>
+                  </VBox>
+                  <VBox fillWidth="false">
+                     <children>
+                        <JFXComboBox fx:id="field_adduser_accesslevel" prefWidth="200.0" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+                <HBox prefHeight="32.0" prefWidth="300.0" />
                 <HBox layoutX="10.0" layoutY="138.0" prefHeight="32.0" prefWidth="300.0">
                     <children>
                         <VBox prefHeight="200.0" prefWidth="100.0" />
                         <VBox prefHeight="200.0" prefWidth="100.0">
                             <children>
-                                <Button fx:id="btn_adduser_submit" defaultButton="true" mnemonicParsing="false" onAction="#btn_adduser_submit_action" prefHeight="54.0" prefWidth="100.0" text="Submit" textAlignment="CENTER" />
+                        <JFXButton fx:id="btn_adduser_submit" mnemonicParsing="false" onAction="#btn_adduser_submit_action" prefWidth="100.0" text="Submit" />
                             </children>
                         </VBox>
                         <VBox prefHeight="200.0" prefWidth="100.0">
                             <children>
-                                <Button fx:id="btn_adduser_cancel" alignment="CENTER" cancelButton="true" mnemonicParsing="false" onAction="#btn_adduser_cancel_action" prefHeight="59.0" prefWidth="100.0" text="Cancel" textAlignment="CENTER" />
+                        <JFXButton fx:id="btn_adduser_cancel" mnemonicParsing="false" onAction="#btn_adduser_cancel_action" prefWidth="100.0" text="Cancel" />
                             </children>
                         </VBox>
                     </children>
