--- a/Assignment 1/employee_control/form_adduser.fxml
+++ b/Assignment 1/employee_control/form_adduser.fxml
@@ -8,6 +8,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <AnchorPane prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.221" xmlns:fx="http://javafx.com/fxml/1" fx:controller="employee_control.Controller_adduser">
     <children>
         <VBox prefHeight="200.0" prefWidth="300.0">
@@ -50,7 +53,14 @@
                         </VBox>
                         <VBox fillWidth="false" prefHeight="29.0" prefWidth="202.0">
                             <children>
-                        <JFXComboBox fx:id="field_adduser_type" prefWidth="200.0" />
+                                <JFXComboBox fx:id="combo_adduser_type" prefWidth="200.0">
+                                        <items>
+                                            <FXCollections fx:factory="observableArrayList">
+                                                <String fx:value="Staff" />
+                                                <String fx:value="Faculty" />
+                                            </FXCollections>
+                                        </items>
+                                </JFXComboBox>
                             </children>
                         </VBox>
                     </children>
@@ -64,7 +74,15 @@
                         </VBox>
                         <VBox fillWidth="false">
                             <children>
-                        <JFXComboBox fx:id="field_adduser_department" prefWidth="200.0" />
+                                <JFXComboBox fx:id="combo_adduser_department" prefWidth="200.0">
+                                    <items>
+                                        <FXCollections fx:factory="observableArrayList">
+                                            <String fx:value="Apple" />
+                                            <String fx:value="Orange" />
+                                            <String fx:value="Banana" />
+                                        </FXCollections>
+                                    </items>
+                                </JFXComboBox>
                             </children>
                         </VBox>
                     </children>
@@ -78,7 +96,15 @@
                   </VBox>
                   <VBox fillWidth="false">
                      <children>
-                        <JFXComboBox fx:id="field_adduser_accesslevel" prefWidth="200.0" />
+                        <JFXComboBox fx:id="combo_adduser_accesslevel" prefWidth="200.0">
+                            <items>
+                                <FXCollections fx:factory="observableArrayList">
+                                    <String fx:value="Apple" />
+                                    <String fx:value="Orange" />
+                                    <String fx:value="Banana" />
+                                </FXCollections>
+                            </items>
+                        </JFXComboBox>
                      </children>
                   </VBox>
                </children>
