--- a/Assignment 2/Assignment2/form_student.fxml
+++ b/Assignment 2/Assignment2/form_student.fxml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.221" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Assignment2.Controller_student">
    <children>
-      <HBox prefHeight="100.0" prefWidth="800.0" />
+      <HBox prefHeight="100.0" prefWidth="800.0">
+         <children>
+            <Label alignment="CENTER" prefHeight="100.0" prefWidth="800.0" text="Student Database" textAlignment="CENTER">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Label>
+         </children></HBox>
       <VBox layoutY="100.0" prefHeight="400.0" prefWidth="600.0">
          <children>
-             <TableView fx:id="student_tableview" minHeight="-Infinity" prefHeight="435.0" prefWidth="969.0">
+             <TableView fx:id="student_tableview" minHeight="-Infinity" prefHeight="435.0" prefWidth="969.0" style="-fx-background-insets: 0; -fx-padding: 0;">
                  <columns>
                      <TableColumn fx:id="col_1" prefWidth="50.0" text="Id">
                          <cellValueFactory>
@@ -42,6 +55,101 @@
                  </columns>
              </TableView>
          </children></VBox>
-      <VBox layoutX="600.0" layoutY="100.0" prefHeight="400.0" prefWidth="200.0" />
+      <VBox layoutX="600.0" layoutY="100.0" prefHeight="435.0" prefWidth="200.0">
+         <children>
+            <VBox prefHeight="385.0" prefWidth="200.0">
+               <children>
+                  <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="FILTERS" textAlignment="CENTER" underline="true" />
+                  <VBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="Age" textAlignment="CENTER" />
+                        <HBox prefHeight="75.0" prefWidth="200.0">
+                           <children>
+                              <HBox prefHeight="75.0" prefWidth="100.0">
+                                 <children>
+                                    <VBox prefHeight="200.0" prefWidth="100.0">
+                                       <children>
+                                          <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="From" textAlignment="CENTER" />
+                                          <JFXComboBox prefWidth="150.0">
+                                             <VBox.margin>
+                                                <Insets left="5.0" right="5.0" />
+                                             </VBox.margin>
+                                          </JFXComboBox>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </HBox>
+                              <HBox prefHeight="75.0" prefWidth="100.0">
+                                 <children>
+                                    <VBox prefHeight="200.0" prefWidth="100.0">
+                                       <children>
+                                          <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="To" textAlignment="CENTER" />
+                                          <JFXComboBox prefWidth="150.0">
+                                             <VBox.margin>
+                                                <Insets left="5.0" right="5.0" />
+                                             </VBox.margin>
+                                          </JFXComboBox>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="Major" textAlignment="CENTER" />
+                        <JFXComboBox fx:id="combo_majors" prefWidth="200.0">
+                           <VBox.margin>
+                              <Insets left="5.0" right="5.0" />
+                           </VBox.margin></JFXComboBox>
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="GPA" textAlignment="CENTER" />
+                        <HBox prefHeight="75.0" prefWidth="200.0">
+                           <children>
+                              <HBox prefHeight="75.0" prefWidth="100.0">
+                                 <children>
+                                    <VBox prefHeight="200.0" prefWidth="100.0">
+                                       <children>
+                                          <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="From" textAlignment="CENTER" />
+                                          <JFXTextField>
+                                             <VBox.margin>
+                                                <Insets left="5.0" right="5.0" />
+                                             </VBox.margin>
+                                          </JFXTextField>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </HBox>
+                              <HBox prefHeight="75.0" prefWidth="100.0">
+                                 <children>
+                                    <VBox prefHeight="200.0" prefWidth="100.0">
+                                       <children>
+                                          <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="To" textAlignment="CENTER" />
+                                          <JFXTextField>
+                                             <VBox.margin>
+                                                <Insets left="5.0" right="5.0" />
+                                             </VBox.margin>
+                                          </JFXTextField>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </children>
+            </VBox>
+            <VBox prefHeight="50.0" prefWidth="200.0">
+               <children>
+                  <JFXButton mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" text="Exit" />
+               </children>
+            </VBox>
+         </children></VBox>
    </children>
 </AnchorPane>
