--- a/Assignment 2/Assignment2/form_student.fxml
+++ b/Assignment 2/Assignment2/form_student.fxml
@@ -22,6 +22,7 @@
                   <Font size="36.0" />
                </font>
             </Label>
+            <JFXButton fx:id="button_validate" mnemonicParsing="false" onAction="#updateDatatable" prefHeight="39.0" prefWidth="325.0" text="Button" />
          </children></HBox>
       <VBox layoutY="100.0" prefHeight="400.0" prefWidth="600.0">
          <children>
@@ -70,7 +71,7 @@
                                     <VBox prefHeight="200.0" prefWidth="100.0">
                                        <children>
                                           <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="From" textAlignment="CENTER" />
-                                          <JFXComboBox prefWidth="150.0">
+                                          <JFXComboBox fx:id="combo_age_from" prefWidth="150.0">
                                              <VBox.margin>
                                                 <Insets left="5.0" right="5.0" />
                                              </VBox.margin>
@@ -84,7 +85,7 @@
                                     <VBox prefHeight="200.0" prefWidth="100.0">
                                        <children>
                                           <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="To" textAlignment="CENTER" />
-                                          <JFXComboBox prefWidth="150.0">
+                                          <JFXComboBox fx:id="combo_age_to" prefWidth="150.0">
                                              <VBox.margin>
                                                 <Insets left="5.0" right="5.0" />
                                              </VBox.margin>
@@ -116,7 +117,7 @@
                                     <VBox prefHeight="200.0" prefWidth="100.0">
                                        <children>
                                           <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="From" textAlignment="CENTER" />
-                                          <JFXTextField>
+                                          <JFXTextField fx:id="text_gpa_from">
                                              <VBox.margin>
                                                 <Insets left="5.0" right="5.0" />
                                              </VBox.margin>
@@ -130,7 +131,7 @@
                                     <VBox prefHeight="200.0" prefWidth="100.0">
                                        <children>
                                           <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="To" textAlignment="CENTER" />
-                                          <JFXTextField>
+                                          <JFXTextField fx:id="text_gpa_to">
                                              <VBox.margin>
                                                 <Insets left="5.0" right="5.0" />
                                              </VBox.margin>
@@ -143,11 +144,16 @@
                         </HBox>
                      </children>
                   </VBox>
+                  <VBox prefHeight="30.0" prefWidth="200.0">
+                     <children>
+                        <Label alignment="CENTER" prefWidth="200.0" text="Only values between 0 and 4" />
+                     </children>
+                  </VBox>
                </children>
             </VBox>
             <VBox prefHeight="50.0" prefWidth="200.0">
                <children>
-                  <JFXButton mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" text="Exit" />
+                  <JFXButton fx:id="button_exit" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" text="Exit" />
                </children>
             </VBox>
          </children></VBox>
