--- a/Final Project/HBCmanage/form_itemlist.fxml
+++ b/Final Project/HBCmanage/form_itemlist.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="SugarERP.controller_customers"
+            fx:controller="HBCmanage.FormItemlist"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
