--- a/Final Project/HBCmanage/form_mainapp.fxml
+++ b/Final Project/HBCmanage/form_mainapp.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="HBCmanage.controiller_mainapp"
+            fx:controller="HBCmanage.controller_mainapp"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
