establish connection and populate inventory and customers

--- a/Final Project/HBCmanage/form_inventory.fxml
+++ b/Final Project/HBCmanage/form_inventory.fxml
@@ -1,14 +1,92 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="HBCmanage.controller_inventory"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="600.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.221" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HBCmanage.controller_inventory">
+   <children>
+      <VBox prefHeight="600.0" prefWidth="1200.0">
+         <children>
+            <VBox prefHeight="100.0" prefWidth="1200.0" />
+            <HBox prefHeight="500.0" prefWidth="1200.0">
+               <children>
+                  <HBox prefHeight="500.0" prefWidth="1000.0">
+                     <children>
+                        <VBox prefHeight="500.0" prefWidth="1000.0">
+                           <children>
+                              <VBox prefHeight="50.0" prefWidth="1000.0" />
+                              <VBox prefHeight="450.0" prefWidth="1000.0">
+                                 <children>
+                                    <TableView fx:id="inventory_tableview" prefHeight="450.0" prefWidth="1000.0">
+                                      <columns>
+                                          <TableColumn fx:id="col_1" prefWidth="50" text="Id">
+                                              <cellValueFactory>
+                                                  <PropertyValueFactory property="Inventory_ID" />
+                                              </cellValueFactory>
+                                          </TableColumn>
+                                          <TableColumn fx:id="col_2" prefWidth="150" text="PN">
+                                              <cellValueFactory>
+                                                  <PropertyValueFactory property="Inventory_PartNumber" />
+                                              </cellValueFactory>
+                                          </TableColumn>
+                                          <TableColumn fx:id="col_3" prefWidth="350" text="Description">
+                                              <cellValueFactory>
+                                                  <PropertyValueFactory property="Inventory_Description" />
+                                              </cellValueFactory>
+                                          </TableColumn>
+                                          <TableColumn fx:id="col_4" prefWidth="100" text="Price">
+                                              <cellValueFactory>
+                                                  <PropertyValueFactory property="Inventory_Price" />
+                                              </cellValueFactory>
+                                          </TableColumn>
+                                          <TableColumn fx:id="col_5" prefWidth="150" text="Type">
+                                              <cellValueFactory>
+                                                  <PropertyValueFactory property="Inventory_Type" />
+                                              </cellValueFactory>
+                                          </TableColumn>
+                                          <TableColumn fx:id="col_6" prefWidth="100" text="Cost">
+                                              <cellValueFactory>
+                                                  <PropertyValueFactory property="Inventory_Cost" />
+                                              </cellValueFactory>
+                                          </TableColumn>
+                                          <TableColumn fx:id="col_7" prefWidth="100" text="On Hand">
+                                              <cellValueFactory>
+                                                  <PropertyValueFactory property="Inventory_QtyOnHand" />
+                                              </cellValueFactory>
+                                          </TableColumn>
+                                      </columns>
+                                    </TableView>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="500.0" prefWidth="200.0" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </children>
 </AnchorPane>
