--- a/Final Project/HBCmanage/form_customers.fxml
+++ b/Final Project/HBCmanage/form_customers.fxml
@@ -1,14 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="HBCmanage.controller_customers"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.221" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HBCmanage.controller_customers">
+    <children>
+        <VBox prefHeight="400.0" prefWidth="750.0">
+            <children>
+                <VBox prefHeight="50.0" prefWidth="750.0" />
+                <HBox prefHeight="350.0" prefWidth="750.0">
+                    <children>
+                        <HBox prefHeight="350.0" prefWidth="600.0">
+                            <children>
+                                <VBox prefHeight="350.0" prefWidth="600.0">
+                                    <children>
+                                        <VBox prefHeight="50.0" prefWidth="1000.0" />
+                                        <VBox prefHeight="300.0" prefWidth="600.0">
+                                            <children>
+                                                <TableView fx:id="customer_list" prefHeight="300.0" prefWidth="600.0">
+                                                    <columns>
+                                                        <TableColumn fx:id="col_1" prefWidth="50" text="Id">
+                                                            <cellValueFactory>
+                                                                <PropertyValueFactory property="Customer_ID" />
+                                                            </cellValueFactory>
+                                                        </TableColumn>
+                                                        <TableColumn fx:id="col_2" prefWidth="150" text="First Name">
+                                                            <cellValueFactory>
+                                                                <PropertyValueFactory property="Customer_FirstName" />
+                                                            </cellValueFactory>
+                                                        </TableColumn>
+                                                        <TableColumn fx:id="col_3" prefWidth="150" text="Last Name">
+                                                            <cellValueFactory>
+                                                                <PropertyValueFactory property="Customer_LastName" />
+                                                            </cellValueFactory>
+                                                        </TableColumn>
+                                                        <TableColumn fx:id="col_4" prefWidth="100" text="Phone">
+                                                            <cellValueFactory>
+                                                                <PropertyValueFactory property="Customer_PhoneNumber" />
+                                                            </cellValueFactory>
+                                                        </TableColumn>
+                                                        <TableColumn fx:id="col_5" prefWidth="150" text="Email">
+                                                            <cellValueFactory>
+                                                                <PropertyValueFactory property="Customer_EmailAddress" />
+                                                            </cellValueFactory>
+                                                        </TableColumn>
+                                                    </columns>
+                                                </TableView>
+                                            </children>
+                                        </VBox>
+                                    </children>
+                                </VBox>
+                            </children>
+                        </HBox>
+                        <HBox prefHeight="350.0" prefWidth="150.0" />
+                    </children>
+                </HBox>
+            </children>
+        </VBox>
+    </children>
 </AnchorPane>
